style: fix alignment of error-wrapper class

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,11 +41,11 @@ button {
   display: flex;
   align-items: center;
   gap: 0.4rem;
-  height: 30px;
+  height: 50px;
 }
 
 .error-wrapper img {
-  width: 1.1rem;
+  max-width: 1.5rem;
 }
 
 .error {
